# AT-interview-padel-blog

./: .env  README.md  entrypoint-dev.sh  entrypoint.sh  pyproject.toml
app/: settings.py  urls.py  views.py
app/templates/: base.html
authentication/: forms.py  urls.py  views.py
authentication/templates/: login.html  register.html
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/css/: flux.css
blog/templates/: article.html  flux.html
contact/: forms.py  models.py  views.py
contact/migrations/: 0001_initial.py
contact/templates/: contact.html
event/: forms.py  models.py  urls.py  views.py
event/migrations/: 0001_initial.py
event/static/event/css/: events_list.css
event/templates/: events_list.html
fixtures/: blog_article_fixture.json  event_event_fixture.json
staticfiles/auth/css/: login.css  register.css
staticfiles/blog/css/: article.css  flux.css
staticfiles/contact/css/: contact.css
staticfiles/css/: base.css
staticfiles/event/css/: events_list.css  events_list.html
