[tool.poetry]
name = "padelblog"
version = "0.1.0"
description = ""
authors = ["Clement MARCEL <lecramproject@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
pillow = "^10.4.0"
gunicorn = "^23.0.0"
drf-yasg = "^1.21.7"
setuptools = "^75.1.0"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-browser-reload = "^1.15.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
